@@ -1,3 +1,10 @@
+2010-02-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* SoftDebuggerSession.cs: When a breakpoint can't be resolved,
+	  set it as invalid. Set it to valid when resolved. Fixes bug
+	  #564541 - Set breakpoint should work on expressions and not
+	  lines.
+
 2010-02-02  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* ArrayAdaptor.cs:
